JRE 17 test